[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[project]
name = "simpleapiserver"
version = "0.1.0"
description = "This is a very Simple API Server project."
authors = [
    {name = "venanttang",email = "16545531+venanttang@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (==0.115.12)",
    "httpx (==0.28.1)",
    "jsonschema (==4.23.0)",
    "pydantic (==2.11.3)",
    "pytest (==8.3.5)",
    "sqlalchemy (==2.0.40)",
    "sqlmodel (==0.0.24)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
